# tiny_graph

./: Cargo.toml  lcov.info
src/: connections8.rs  graph8.rs  graph_path_iter.rs  graph_permutation14.rs  graph_permutation8.rs  lib.rs  symmetries8.rs  util.rs
src/snapshots/: const_graph__graph8__tests__subgraph_permutations.snap.new  tiny_graph__graph8__tests__subgraph_permutations.snap  tiny_graph__graph_path_iter__tests__graph_path_iter.snap  tiny_graph__graph_permutation14__test__sequence_for_5_elements.snap  tiny_graph__graph_permutation8__test__sequence_for_5_elements.snap
