[package]
name = "tiny_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
const_sized_bit_set = "0.3.0"
serde = {version = "1.0", features=["derive"], optional = true}


[dev-dependencies]
insta = "1"
itertools = "0.14"
serde = {version = "1.0", features=["derive"]}
const_sized_bit_set = {version = "0.3.0", features = ["serde"]}


[features]
serde = ["dep:serde", "const_sized_bit_set/serde"]